--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -4,10 +4,10 @@
 
 <CascadingValue Value="this">
     <Bootstrapper/>
-    <div class="h-full bg-dark flex-shrink-0 flex flex-col border-dark-550 border-r">
-        <MenuItem Icon="apps" Text="Mod Library" DefaultActive="true" Uri="/"/>
+    <div class="h-full bg-dark flex flex-col border-dark-550 border-r" style="flex: 0 0 195px">
+        <MenuItem Icon="dashboard" Text="Mod Manager" DefaultActive="true" Uri="/"/>
         <MenuItem Icon="videogame_asset" Text="Asset Explorer" Uri="/assets"/>
-        <MenuItem Icon="folder_zip" Text="EARC Mods" Uri="/earc"/>
+        <MenuItem Icon="apps" Text="Workshop Mods" Uri="/mod"/>
         @* <MenuItem Icon="share" Text="Sequence Editor" Uri="/sequenceeditor"></MenuItem> *@
         <div class="flex-grow"></div>
 
